// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeMatchingFilters should not remove 1`] = `
Object {
  "filter": Object {
    "filters": Array [
      Object {
        "filters": Array [
          Object {
            "field": "y",
            "operator": "eq",
            "value": 2,
          },
          Object {
            "field": "z",
            "operator": "eq",
            "value": 2,
          },
        ],
        "logic": "and",
      },
    ],
    "logic": "and",
  },
}
`;

exports[`removeMatchingFilters should remove 1`] = `
Object {
  "filter": Object {
    "filters": Array [
      Object {
        "field": "z",
        "operator": "eq",
        "value": 2,
      },
    ],
    "logic": "and",
  },
}
`;

exports[`removeMatchingFilters should remove sub filters 1`] = `
Object {
  "filter": Object {
    "filters": Array [
      Object {
        "filters": Array [
          Object {
            "field": "z",
            "operator": "eq",
            "value": 2,
          },
        ],
        "logic": "and",
      },
      Object {
        "filters": Array [
          Object {
            "field": "a",
            "operator": "eq",
            "value": 2,
          },
          Object {
            "field": "b",
            "operator": "eq",
            "value": 2,
          },
        ],
        "logic": "and",
      },
      Object {
        "filters": Array [
          Object {
            "field": "e",
            "operator": "eq",
            "value": 2,
          },
          Object {
            "field": "f",
            "operator": "eq",
            "value": 2,
          },
        ],
        "logic": "and",
      },
    ],
    "logic": "and",
  },
}
`;

exports[`removeMatchingFilters should work with non-filtered odata states 1`] = `
Object {
  "filter": Object {
    "filters": Array [],
    "logic": "and",
  },
}
`;
